Add comprehensive hero section comments across all pages
- Added detailed comments for hero sections in all Arabic pages
- Added detailed comments for hero sections in all English pages
- Comments explain section structure, content wrappers, headings, and layout
- Improved code documentation for better maintainability

--- a/en/contact.html
+++ b/en/contact.html
@@ -132,13 +132,20 @@
     </div>
   </div>
   <div class="page-wrapper">
+    <!-- Contact page hero section with English content -->
     <section class="section page-hero">
+      <!-- Hero content wrapper containing contact information -->
       <div class="page-hero-content-wrapper">
+        <!-- Main page heading in English -->
         <h1 class="page-hero-heading">Contact</h1>
-        <div class="sub-heading white email">Unified Number - 920006553  |  Email - <a href="mailto:info@calma.sa" class="email-link">info@calma.sa</a>
+        <!-- Contact information with unified number and clickable email link -->
+        <div class="sub-heading white email">Unified Number - 920006553  |  Email - <a href="mailto:info@calma.sa" class="email-link">info@calma.sa</a>
         </div>
       </div>
+      <!-- Hero image container with full width -->
       <div class="w-layout-blockcontainer container full hero w-container">
+        <!-- Hero image wrapper with responsive contact/CTA image -->
+        <!-- The image uses lazy loading and multiple sizes for optimal performance -->
         <div class="section-hero-image-wrapper"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px" srcset="../images/CTA-p-500.jpg 500w, ../images/CTA-p-800.jpg 800w, ../images/CTA-p-1080.jpg 1080w, ../images/CTA-p-1600.jpg 1600w, ../images/CTA.JPG 1920w" alt="" loading="lazy" src="../images/CTA.JPG" class="image"></div>
       </div>
     </section>
