--- a/en/guarantees.html
+++ b/en/guarantees.html
@@ -131,9 +131,13 @@
       </div>
     </div>
   </div>
+  <!-- Guarantees page hero section with text-only content -->
   <section class="section page-hero _2nd">
+    <!-- Hero content wrapper for guarantees page -->
     <div class="page-hero-content-wrapper">
+      <!-- Main page heading -->
       <h1 class="page-hero-heading">Guarantees</h1>
+      <!-- Descriptive subtitle explaining guarantee services -->
       <div class="sub-heading hero">Clear guarantees designed to give you peace of mind, confidence, and total transparency.</div>
     </div>
   </section>
