--- a/en/privacy-policy.html
+++ b/en/privacy-policy.html
@@ -131,9 +131,13 @@
       </div>
     </div>
   </div>
+  <!-- Privacy Policy page hero section with text-only content -->
   <section class="section page-hero _2nd">
+    <!-- Hero content wrapper for privacy policy page -->
     <div class="page-hero-content-wrapper">
+      <!-- Main page heading -->
       <h1 class="page-hero-heading">Privacy Policy</h1>
+      <!-- Last updated date information -->
       <div class="sub-heading hero">Last updated: July 27, 2025</div>
     </div>
   </section>
