--- a/about.html
+++ b/about.html
@@ -148,12 +148,19 @@
     </div>
   </div>
   <div class="page-wrapper">
+    <!-- About page hero section with Arabic content -->
     <section class="section page-hero">
+      <!-- Hero content wrapper containing page title and subtitle -->
       <div class="page-hero-content-wrapper">
+        <!-- Main page heading in Arabic: "About Calma" -->
         <h1 class="page-hero-heading">عن كالـما</h1>
+        <!-- Hero subtitle in Arabic: "We shape the features of tomorrow" -->
         <div class="sub-heading hero">.نصنع ملامح الغد </div>
       </div>
+      <!-- Hero image container with full width -->
       <div class="w-layout-blockcontainer container full hero w-container">
+        <!-- Hero image wrapper with responsive image optimization -->
+        <!-- The image uses lazy loading and multiple sizes for different screen widths -->
         <div class="section-hero-image-wrapper"><img src="images/About-Header.jpg" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/About-Header-p-500.jpg 500w, images/About-Header-p-800.jpg 800w, images/About-Header-p-1080.jpg 1080w, images/About-Header-p-1600.jpg 1600w, images/About-Header.jpg 1920w" class="image"></div>
       </div>
     </section>
