--- a/contact.html
+++ b/contact.html
@@ -132,12 +132,19 @@
     </div>
   </div>
   <div class="page-wrapper">
+    <!-- Contact page hero section with Arabic content -->
     <section class="section page-hero">
+      <!-- Hero content wrapper containing contact information -->
       <div class="page-hero-content-wrapper">
-        <h1 class="page-hero-heading">تواصل  معنا</h1>
+        <!-- Main page heading in Arabic: "Contact Us" -->
+        <h1 class="page-hero-heading">تواصل  معنا</h1>
+        <!-- Contact information in Arabic: unified number and email -->
         <div class="sub-heading white email">info@calma.sa-البريد الإلكتروني - 920006553| الرقم الموحد </div>
       </div>
+      <!-- Hero image container with full width -->
       <div class="w-layout-blockcontainer container full hero w-container">
+        <!-- Hero image wrapper with responsive contact/CTA image -->
+        <!-- The image uses lazy loading and multiple sizes for optimal performance -->
         <div class="section-hero-image-wrapper"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px" srcset="images/CTA-p-500.jpg 500w, images/CTA-p-800.jpg 800w, images/CTA-p-1080.jpg 1080w, images/CTA-p-1600.jpg 1600w, images/CTA.JPG 1920w" alt="" loading="lazy" src="images/CTA.JPG" class="image"></div>
       </div>
     </section>
