--- a/en/home.html
+++ b/en/home.html
@@ -181,81 +181,143 @@
       </div>
     </div>
   </div>
+  <!-- Main scroll container that wraps the entire page content -->
   <div id="scroll-container" class="viewport">
+    <!-- Page wrapper that contains all page sections -->
     <div class="page-wrapper">
+      <!-- Hero section - the main landing area of the website (English version) -->
       <section class="hero-section">
+        <!-- Container that centers and constrains the hero content width -->
         <div class="w-layout-blockcontainer hero-container w-container">
+          <!-- Sticky wrapper that allows the hero content to stick during scroll -->
           <div id="w-node-_2cdaa73e-f24f-02a5-619f-2e875e3b9122-0aae306c" class="hero-sticky-wrapper">
+            <!-- Main hero layout using CSS Grid for English content -->
             <div id="w-node-cb1bcd9d-9b48-d2e7-9da1-ba58604cb21c-0aae306c" class="w-layout-layout hero-quickstack wf-layout-layout">
+              <!-- First cell containing company logo and English tagline -->
               <div class="w-layout-cell">
+                <!-- Left content area for English text -->
                 <div class="hero-left-div _1">
+                  <!-- Container for the company logo -->
                   <div class="left-content-div">
+                    <!-- Company logo as animated GIF with multilanguage wordmark -->
                     <div class="hero-logo-div"><img src="../images/Calma_Wordmark_Multilanguage.gif" loading="lazy" alt="" class="image"></div>
                   </div>
+                  <!-- Main heading section with English company tagline -->
                   <div class="hero-heading-div">
+                    <!-- First part of English heading -->
                     <h1 class="hero-heading">Building Value,</h1>
-                    <h1 class="hero-heading zigzag">                   Shaping tomorrow.</h1>
+                    <!-- Second part with special zigzag styling -->
+                    <h1 class="hero-heading zigzag">                   Shaping tomorrow.</h1>
                   </div>
                 </div>
               </div>
+              <!-- Second cell containing the first hero project -->
               <div class="w-layout-cell">
+                <!-- Middle project container -->
                 <div class="hero-middle-div _1">
-                  <div class="hero-image-wrapper"><img src="../images/Hero-1.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px" srcset="../images/Hero-1-p-500.jpg 500w, ../images/Hero-1-p-800.jpg 800w, ../images/Hero-1-p-1080.jpg 1080w, ../images/Hero-1.JPG 1439w" alt="" class="image">
+                  <!-- Image wrapper that contains the hero image and overlaid project information -->
+                  <div class="hero-image-wrapper">
+                    <!-- Responsive hero image with multiple sizes for different screen widths -->
+                    <!-- The 'loading="lazy"' improves page performance by loading image only when needed -->
+                    <!-- The 'sizes' attribute tells browser which image size to use based on viewport width -->
+                    <!-- The 'srcset' provides multiple image resolutions for optimal loading -->
+                    <img src="../images/Hero-1.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px" srcset="../images/Hero-1-p-500.jpg 500w, ../images/Hero-1-p-800.jpg 800w, ../images/Hero-1-p-1080.jpg 1080w, ../images/Hero-1.JPG 1439w" alt="" class="image">
+                    <!-- Project details overlay that appears on top of the hero image -->
                     <div class="hero-project-details-wrapper">
+                      <!-- English subtitle for project category -->
                       <h4 class="hero-sub-heading">Flagship project</h4>
+                      <!-- Project name -->
                       <h3 class="hero-project-name">One Calma Tower</h3>
                     </div>
                   </div>
                 </div>
               </div>
+              <!-- Third cell containing the second hero project -->
               <div class="w-layout-cell">
+                <!-- Right project container -->
                 <div class="hero-right-div _1">
-                  <div class="hero-image-wrapper"><img src="../images/Hero-2.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px" srcset="../images/Hero-2-p-500.jpg 500w, ../images/Hero-2-p-800.jpg 800w, ../images/Hero-2-p-1080.jpg 1080w, ../images/Hero-2.JPG 1439w" alt="" class="image">
+                  <!-- Second image wrapper with same structure as the first -->
+                  <div class="hero-image-wrapper">
+                    <!-- Second responsive hero image with same optimization techniques -->
+                    <img src="../images/Hero-2.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.984375px" srcset="../images/Hero-2-p-500.jpg 500w, ../images/Hero-2-p-800.jpg 800w, ../images/Hero-2-p-1080.jpg 1080w, ../images/Hero-2.JPG 1439w" alt="" class="image">
+                    <!-- Second project details overlay -->
                     <div class="hero-project-details-wrapper">
+                      <!-- English project category label -->
                       <h4 class="hero-sub-heading">Flagship project</h4>
+                      <!-- Project identifier -->
                       <h3 class="hero-project-name">GH220</h3>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+            <!-- Second hero layout section showcasing additional projects (English version) -->
             <div id="w-node-e9c016c0-0e57-4794-1ef9-d321fede1533-0aae306c" class="w-layout-layout hero-quickstack up wf-layout-layout">
+              <!-- First additional project showcase cell -->
               <div class="w-layout-cell">
+                <!-- Left project container with animation ID for interactions -->
                 <div data-w-id="e9c016c0-0e57-4794-1ef9-d321fede1535" class="hero-left-div _2">
+                  <!-- Project image with absolute positioning -->
                   <div class="hero-project-absolute-div"><img src="../images/Rectangle-6.png" loading="lazy" sizes="(max-width: 696px) 100vw, 696px" srcset="../images/Rectangle-6-p-500.png 500w, ../images/Rectangle-6.png 696w" alt="" class="image"></div>
+                  <!-- Project information overlay -->
                   <div class="hero-project-details-wrapper">
+                    <!-- English subtitle for project category -->
                     <h4 class="hero-sub-heading">Flagship project</h4>
+                    <!-- Project identifier -->
                     <h3 class="hero-project-name">YS190</h3>
                   </div>
                 </div>
               </div>
+              <!-- Second project showcase cell -->
               <div class="w-layout-cell">
+                <!-- Middle project container with animation ID -->
                 <div data-w-id="e9c016c0-0e57-4794-1ef9-d321fede1541" class="hero-middle-div _2">
+                  <!-- Middle project image with responsive optimization -->
                   <div class="hero-middle-absolute-image-wrapper"><img src="../images/YS200--KALMA-2-1-1.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="../images/YS200--KALMA-2-1-1-p-500.jpg 500w, ../images/YS200--KALMA-2-1-1-p-800.jpg 800w, ../images/YS200--KALMA-2-1-1-p-1080.jpg 1080w, ../images/YS200--KALMA-2-1-1-p-1600.jpg 1600w, ../images/YS200--KALMA-2-1-1.JPG 1920w" alt="" class="image"></div>
+                  <!-- Middle project details overlay -->
                   <div class="hero-project-details-wrapper">
+                    <!-- English project category -->
                     <h4 class="hero-sub-heading">Flagship project</h4>
+                    <!-- Project identifier -->
                     <h3 class="hero-project-name">YS200</h3>
                   </div>
                 </div>
               </div>
+              <!-- Third project showcase cell -->
               <div class="w-layout-cell">
+                <!-- Right project container with animation ID -->
                 <div data-w-id="e9c016c0-0e57-4794-1ef9-d321fede154c" class="hero-right-div _2">
+                  <!-- Right project image (placeholder/dummy image) -->
                   <div class="hero-right-absolute-div"><img src="../images/dummy_400x300_ffffff_cccccc_43-1_1.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="../images/dummy_400x300_ffffff_cccccc_43-1_1-p-500.jpg 500w, ../images/dummy_400x300_ffffff_cccccc_43-1_1-p-800.jpg 800w, ../images/dummy_400x300_ffffff_cccccc_43-1_1-p-1080.jpg 1080w, ../images/dummy_400x300_ffffff_cccccc_43-1_1-p-1600.jpg 1600w, ../images/dummy_400x300_ffffff_cccccc_43-1_1.JPG 1920w" alt="" class="image"></div>
+                  <!-- Right project details overlay -->
                   <div class="hero-project-details-wrapper">
+                    <!-- English project category -->
                     <h4 class="hero-sub-heading">Flagship project</h4>
+                    <!-- Main project name -->
                     <h3 class="hero-project-name">Calma Tower</h3>
                   </div>
                 </div>
               </div>
+            <!-- End of second hero layout section -->
             </div>
+          <!-- End of sticky wrapper -->
           </div>
+        <!-- End of hero container -->
         </div>
+      <!-- End of hero section -->
       </section>
+      <!-- Scroll section with navigation to about section -->
       <section class="section pastel-gray _2nd">
+        <!-- Scroll indicator background -->
         <div class="scroll-down-div">
+          <!-- Scroll link with animation ID that navigates to about section -->
           <a data-w-id="14be4303-0de3-a018-85e7-fec2584ef701" href="#about" class="scroll w-inline-block">
+            <!-- Scroll arrow container with CSS transform for animation -->
             <div style="-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="scroll-arrow-div">
-              <h4 class="scroll-heading dark">scroll</h4><img src="../images/Asset-12-1.svg" loading="lazy" alt="">
+              <!-- Scroll text -->
+              <h4 class="scroll-heading dark">scroll</h4>
+              <!-- Scroll arrow icon -->
+              <img src="../images/Asset-12-1.svg" loading="lazy" alt="">
             </div>
           </a>
         </div>
