--- a/en/projects.html
+++ b/en/projects.html
@@ -132,12 +132,19 @@
     </div>
   </div>
   <div class="page-wrapper">
+    <!-- Projects page hero section with English content -->
     <section class="section page-hero">
+      <!-- Hero content wrapper containing page title and project statistics -->
       <div class="page-hero-content-wrapper">
+        <!-- Main page heading in English -->
         <h1 class="page-hero-heading">Projects</h1>
+        <!-- Hero subtitle showcasing company achievements and standards -->
         <div class="sub-heading hero">28 projects. 2 cities. 1 standard of excellence.</div>
       </div>
+      <!-- Hero image container with full width -->
       <div class="w-layout-blockcontainer container full hero w-container">
+        <!-- Hero image wrapper with responsive project showcase image -->
+        <!-- The image uses lazy loading and multiple sizes for optimal performance -->
         <div class="section-hero-image-wrapper"><img src="../images/Header.JPG" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="../images/Header-p-500.jpg 500w, ../images/Header-p-800.jpg 800w, ../images/Header-p-1080.jpg 1080w, ../images/Header-p-1600.jpg 1600w, ../images/Header.JPG 1920w" class="image"></div>
       </div>
     </section>
