--- a/financing-options.html
+++ b/financing-options.html
@@ -131,9 +131,13 @@
       </div>
     </div>
   </div>
+  <!-- Financing options page hero section with text-only content -->
   <section class="section page-hero _2nd">
+    <!-- Hero content wrapper for financing options page -->
     <div class="page-hero-content-wrapper">
+      <!-- Main page heading -->
       <h1 class="page-hero-heading">Financing options</h1>
+      <!-- Descriptive subtitle explaining financing services -->
       <div class="sub-heading hero">Helping you find the right financial path to turn your real estate goals into reality.</div>
     </div>
   </section>
