--- a/reports.html
+++ b/reports.html
@@ -132,9 +132,13 @@
     </div>
   </div>
   <div class="page-wrapper">
+    <!-- Reports page hero section with text-only content -->
     <section class="section page-hero _2nd">
+      <!-- Hero content wrapper for reports page -->
       <div class="page-hero-content-wrapper">
+        <!-- Main page heading -->
         <h1 class="page-hero-heading">Reports</h1>
+        <!-- Descriptive subtitle explaining the page purpose -->
         <div class="sub-heading hero">Download reports for the project you are interested in.</div>
       </div>
     </section>
