Update CEO message and name section
- Updated CEO message content and styling
- Modified CEO name display and formatting
- Enhanced CEO section layout and presentation

--- a/about.html
+++ b/about.html
@@ -230,8 +230,8 @@
             <div class="ceo-name-wrapper arabic">
               <div class="ceo-logo-wrapper"><img src="images/BRANDMARK_2.png" loading="lazy" alt="" class="image"></div>
               <div>
-                <h3 class="ceo-name">مصعب المجيد</h3>
-                <h4 class="designation arabic">الرئيس التنفيذي | كَلْما</h4>
+                <h3 class="ceo-name"> مصعب الماجد</h3>
+                <h4 class="designation arabic"> رئيس مجلس إدارة كالما</h4>
               </div>
             </div>
           </div>
@@ -247,12 +247,12 @@
                 <div class="rich-text-block ceo arabic w-richtext">
                   <p class="paragraph dark">إلى شركائنا الكرام وسكان مشاريعنا القادمين</p>
                   <p class="paragraph dark ceo">عندما أسست كالما لم أطمح إلى بناء شركة تطوير عقاري تقليدية، بل سعيت إلى إحداث تغيير حقيقي في مفهوم إنشاء المساحات خصيصاً المساحات التي تُجسد رؤية، وتُطلق العنان للإمكانات.</p>
-                  <p class="paragraph dark ceo">اليوم وبينما نفخر بإنجاز ٢٨ مشروعاً ناجحًا في مدينتي الرياض و جدة   ، ندرك جيداً أن القيمة الحقيقية لا تُقاس بالأمتار بل بثقة أكثر من ٢٠٠٠ عائلة اختارت مشاريعنا موطنًا لها.</p>
+                  <p class="paragraph dark ceo">اليوم وبينما نفخر بإنجاز ٢٨ مشروعاً ناجحًا في مدينتي الرياض و جدة   ، ندرك جيداً أن القيمة الحقيقية لا تُقاس بالأمتار بل بثقة أكثر من ٢٠٠٠ عائلة اختارت مشاريعنا موطنًا لها.</p>
                   <p class="paragraph dark ceo">في كالما نضع الموثوقية في صميم كل مشروع، وكل موعد، وكل وعد. وهذا هو ما رسخ مكانتنا ودفعنا للتوسع بثبات في مختلف أنحاء المملكة.</p>
                 </div>
                 <p class="paragraph dark ceo arabic">نحن لا نبني مباني فحسب، بل نُعيد رسم أسلوب الحياة المدني مع دمج ممارسات الاستدامة التي تتماشى مع أهداف رؤية السعودية 2030. نبني مساحات يشعر فيها الجميع بالانتماء، وتزدهر فيها العائلات والأعمال.</p>
                 <p class="paragraph dark ceo arabic">كالما اليوم تمثل ذروة التميز العقاري، حيث تلتقي الرؤية الطموحة بأعلى المعايير. نحن لا نبني فقط، بل نرتقي بأنماط الحياة، ونرسم مستقبلًا يُلهم ويصمد.</p>
-                <p class="paragraph dark arabic">هذه هي كالما – التزام بالهدوء  ينبض بالحياة.</p>
+                <p class="paragraph dark arabic">هذه هي كالما – التزام بالهدوء  ينبض بالحياة.</p>
               </div>
             </div>
           </div>
